# notification-service

./: .gitignore  Dockerfile  docker-compose.test.yml  docker-compose.yml  main.py  pyproject.toml  pytest.ini
core/: celery_app.py  config.py
core/api/v1/: notifications.py
core/crud/: attachments.py  notifications.py
core/database/: db_helper.py  enums.py  models.py
core/schemas/: attachments.py  notifications.py
core/tasks/: email_tasks.py
core/utils/: notification_utils.py  send_email.py  validate_notification.py
migration/: env.py
migration/versions/: eba1f6480973_edit_initial_revision.py  eff6941301af_initial_revision.py  f766a9c380ff_initial_revision.py
test/: conftest.py  test_notifications.py
