[project]
name = "notification-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.4",
    "asyncpg>=0.30.0",
    "email-validator>=2.3.0",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "phonenumbers>=9.0.12",
    "pydantic-settings>=2.10.1",
    "pydantic[email]>=2.11.7",
    "pytest-asyncio>=1.1.0",
    "pytest-dotenv>=0.5.2",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.35.0",
]
